submit some question answer and leetcode solution

--- a/docs/面试相关.md
+++ b/docs/面试相关.md
@@ -55,8 +55,7 @@
   > 这与事实是相违背的，所以提倡 “equals“ 与 ”hashcode“ 一起进行重写，这里也可以得到一个结论：两个完全相同的对象，它们的 `hashcode` 一定相同！
 
 + 关于HashMap如何解决hash冲突、如何进行内存扩容，底层数据结构的优缺点问题？
-
-  >
+  > 
 
 + ConcurrentHashMap实现原理，它与HashMap有啥区别和不同？
 + ArrayList是如何实现自动扩容的？
@@ -75,6 +74,8 @@
 + 你是如何看待指令重排序问题的？
 + Lock的使用问题？
 + 为什么会出现AQS，AQS的实现机制是怎样的，通过它可以干什么？
+  > AQS是一种用于多线程队列同步器，JUC包中很多同步组件类都基于AQS进行实现。
+
 + 什么条件下会产生死锁，如何避免死锁？
 + Synchronize如何实现的，它和Lock的区别是什么？
 
@@ -88,10 +89,12 @@
   > 在java中实现动态代理有两种方式：1）JDK的动态代理，通过接口进行代理。2）javassist动态代理，通过继承的方式进行代理，
   > 无法实现`final`类的代理。动态代理的目的是实现类的增强机制，让我们可以在使用类之前对其增强发挥更加强大的作用。
 
-+ Java中的IO类型有那些？nio又是如何进行实现的？
-+ 为什么要设计封装类？Integer和int有啥区别？
++ Java中的IO类型有那些？NIO又是如何进行实现的？
 + lombok是如何工作的？
-+ 零拷贝是什么？如何实现它？有点是什么？
+  > lombok 在开发中可以帮我简化 setter、 getter 方法生成，日志类的注入、toString 方法的生成都可以通过它提供的注解完成，简化了代码结构！
+  > 这些特性和能力都是通过实现 java 中的注解处理器 `javax.annotation.processing.AbstractProcessor`，对类字节码或源文件进行增强处理！
+
++ 零拷贝是什么？如何实现它？
 
 ##### JVM调优技术
 
@@ -106,7 +109,23 @@
 + mysql的MVCC机制原理？
 + 执行计划（explain）的内容都有什么？
 + 为什么需要进行分库分表？工作中如何实现分库分表？
-+ 如何对一条SQL进行优化，优化的方式有那些？
++ 优化数据查询的方式有那些？
+  > 对SQL的优化的方式有很多中，优化需要结合索引结构、数据结构、业务能力等多个方面而进行，否则我们的优化毫无意义！优化的方式有：
+  > + 加索引：mysql表的索引不是越多越好，能够满足自身业务需求就好，不要盲目的去加索引
+  > + 联合索引：当我们的业务场景中会使用到多个查询条件的时候，我们可以考虑对查询的多个条件建立联合索引
+  > + 减少不必要字段的输出：编写 sql 查询语句时，一定要保持一个用什么查什么的习惯，切记一股脑的将所有字段列查询出来。这么做会占用数据库实例的带宽，数据IO的时长也增加
+  > + 禁令子查询：如果执行的 sql 存在子查询，那么执行时会建立一张临时表用于存储子查询的结果集，对于临时表的创建都会是一种性能上的消耗，查询的效率大大降低。
+  > 优化方式有：1）拆分成两次独立查询，并结合 in 关键字进行优化；2）将子查询降级为 join 联合查询，但是并不建议这么做！
+  > 
+  > + 分库分表：当我们的数据量是千万级、亿级的话，单表查询就无法快速索引数据（毫秒级别），因为mysql采用了B+树的索引方式，当树的级别超过 3 层就会存在性能。
+  > 一般建议单数据表记录数应该不超过 400w 左右，否则就应该采用分库分表的方式来优化数据存储。
+
+
++ mysql中的锁有那些？
+  > + 表锁：锁定当前锁所操作的数据表
+  > + 行锁：会锁定当前所操作的记录
+  > + 间隙锁：锁定一个左开右开的区间，不包含当前记录行
+  > + 临建锁：是行锁与表锁的组合，锁定一个左开右闭的区间，包含了当前锁操作的记录行
 
 ##### 缓存技术
 
@@ -138,6 +157,10 @@
 ##### mybatis技术栈
 
 + #{}和${}的区别？
+  > 虽然这两个都是 mybatis 提供的占位符，看起来时对 mapper 参数进行解析绑定映射处理但又不完全相同，
+  > #{} 操作符在对 SQL 语句进行参数填充时采用了预占位符 `?` 的模式，参考 `java.sql.PreparedStatement` 的使用；
+  > ${} 操作符对应的参数值，会直接解析进 SQL 语句中，在真正执行 Statement 前就已经完成了参数值填充。常用于对数据库函数传值，分库分表动态表名的传递等场景
+
 + 缓存机制的理解？
 
   > 缓存分两类：1）一级缓存，SqlSession级别的本地缓存；2）二级缓存，基于memcached、EHCache等实现，
@@ -147,26 +170,69 @@
 + 如何实现分页？
 +
 
-##### rocketmq技术栈
+##### 消息队列技术栈
 
 + 为什么需要消息队列？它能解决什么问题？
 
-  > 因为消息队列能帮我们三个核心：异步、解耦、削峰！
-
+  > 消息队列的具有：__解耦__、__异步__、__削峰__优点：
+  > + 解耦：
+  > + 异步：
+  > + 削峰：
+  > 
+  > 虽然消息存在那么多好处，它同样也逃不过事物双面性的 “魔咒”，存在这么几个缺点：__系统可用性降低__、__系统复杂度提高__、__一致性问题__！
+  
 + 消息重复消费会存在什么问题？如何解决消息幂性？
+  > 在使用消息队列对业务进行赋能的时候，必然会出现消息重复消费的问题，稍有不慎就会出现各种问题，例如：支付业务中多扣费、重复写导致的脏数据、积分多次发放等等问题。
+  > 这些问题可大可小，一旦出现可能出现 P0 故障，如何避免才是关键！解决的办法其实有很多，例如：通过 redis 进行消息去重、建立消息去重表，通过异步任务扫面任务表处理、
+  > 业务消费消息前检查、乐观锁控制等手段都可以避免。
+
++ RocketMQ为什么快？
+  > 采用了零拷贝技术作为消息持久化刷盘的方案，commit-log 采用顺序读取的方式，避免了文件在读写过程中加入读写锁而导致的IO阻塞问题，
+  > 同时采用了多主多从的高可用分布式架构，多 broker 部署流量负载分流决定了它可以支撑千万级的消费者
+
++ Kafka、ActiveMQ、RabbitMQ、RocketMQ 有什么优缺点？
+  > 下面简单对比下这四个组件：
+  > + __kafka__：吞吐量强可达到千万级，适用于日志、数据计算、批处理等场景，同 topic 下的分区（队列）数量过多（单机超过64）会影响性能，数据分散在各个机器的分区中。
+  > 采用主从架构模式，毫秒级的响应时间，采用写 log 的方式持久化消息
+  > + __rocketmq__：吞吐量略低于 kafka， 消息不易丢失，适用于对消息可靠性要求高的场景，例如交易、订单等，同 topic 下的队列数量高于 kafka （单机最高5w），
+  > 也是基于 log 持久化消息不同于 kafka 的是支持同步刷盘。采用多主多从的分布式架构，天然就是分布式消息！
+  > + __rabbitmq__：消息吞吐量处于百万级，优点是消息时延性可达到微秒级，基于主从做高可用并不是分布式消息队列，单个queue的数据指挥在一个节点中存储，
+  > 开启集群模式后，一个queue的数据在各个节点复制都是全量数据。消费过或过期的消息数据会清理，这一点不同于 kafka 和 rocketmq 的消息机制，虽然也支持磁盘持久化，但是会降低性能！
+  > + __activemq__：很古老了，没有多少人使用了。
+  > 
+  > 综上所述，目前比较主流的就是 kafka 和 rabbitmq ，互联网大厂都在使用中，采用 kafka 进行数据分析计算、日志收集聚合，
+  > 使用 rocketmq 作为业务解耦的消息中间件，消息不会在丢失！
 
 ##### xxl-job相关
 
 ##### 设计模式
 
++ 观察者模式
++ 代理模式
++ 访问者模式
++ 状态模式
++ 单例模式
++ 工厂模式
+
 ##### netty（会问吗？）
 
 + Reactor模型有哪些，各有什么特点？
+  > 
+
 + InternalThreadLocalMap如何实现的？与ThreadLocalMap有什么不同？
+  > InternalThreadLocalMap 是 netty内部扩展实现了一个 threadLocal 模型。
+
 + 关于BossEventLoopGroup和WorkerEventLoopGroup的理解？
+  > 它们的真实面貌就是线程池，不过 Boss 的职责是负责接受分发 Netty IO事件Netty，而 Worker 用于处理数据通道上的IO事件，各司其职又相互配合。
+  > Netty 之所以采用两个不同的事件组进行隔离，避免了单一事件组单个IO线程阻塞导致整个服务出现吞吐下降的问题！
+
 + 对ChannelInboundHandler和ChannelOutboundHandler的理解？
 
   > 都是继承自ChannelHandler接口，Inbound用于从Channel读取数据，Outbound用于向Channel写数据，各自的职责不同！
+  > 当我们需要对服务的输入/输出数据体进行包装、增强、加工时，通过自定义 Handler 并继承 ChannelInboundHandlerAdapter/ChannelOutboundHandlerAdapter 接口即可。
+  > Netty 自身也提供了很多很有用的Handler组件供我们直接使用，例如：ByteToMessageCodec、ByteToMessageDecoder、MessageToByteEncoder、ChannelDuplexHandler等。
+  > 在 dubbo 的 RPC 数据编解码的过程中，上述 Handler 的身影都有所出现，值得注意的是 ChannelDuplexHandler 是一个双工处理器，可以响应IO出入事件并做出回应！
+ 
 
 ##### 扩展及发散性问题
 
@@ -179,3 +245,5 @@
 + 云原生是怎样的？
 + 了解过go吗？
 + jdk8之后都有那些新特性？
++ RocketMQ事件消息和普通消息有什么不同？
+  > 事件消息侧重于已经发生过的每个事件所生出来的消息，它具有具象化、不可变、顺序性等特点。
