add something about cache and mq technology

--- a/docs/面试相关.md
+++ b/docs/面试相关.md
@@ -120,6 +120,13 @@
   > + 分库分表：当我们的数据量是千万级、亿级的话，单表查询就无法快速索引数据（毫秒级别），因为mysql采用了B+树的索引方式，当树的级别超过 3 层就会存在性能。
   > 一般建议单数据表记录数应该不超过 400w 左右，否则就应该采用分库分表的方式来优化数据存储。
 
++ 事务的隔离级别有哪些？
+  > 事务隔离发生在两个或两个以上的事务针对统一数据资源进行访问操作，为了保证单个事务操作的正确性而提出来的一种隔离机制！
+  > 进而提出了读未提交、读已提交、可重复读、串行化这四种事务隔离级别。下面针对各个级别的特点和所产生的问题进行详细介绍：
+  > + 读未提交：
+  > + 读已提交：
+  > + 可重复度：
+  > + 串行化：
 
 + mysql中的锁有那些？
   > + 表锁：锁定当前锁所操作的数据表
@@ -128,6 +135,53 @@
   > + 临建锁：是行锁与表锁的组合，锁定一个左开右闭的区间，包含了当前锁操作的记录行
 
 ##### 缓存技术
+
++ 为什么需要缓存？ 
+  > 为了实现高性能、高并发、打造时延性更低的应用程序，通过引入缓存可以很好地解决这个问题。
+  > 当程序中某些数据做查询时花费的时间很长（200ms+），但数据又不怎么变化的情况下，引入缓存是充分非必要的手段。
+  > 而且缓存对于那些读远远高于写的业务场景来说简直就是一剂良。其实我们所接触的很多技术都有涉及对缓存的运用，
+  > 例如：CPU的三级缓存、MySQL的buffer_pool机制，spring中使用到的三级缓存技术等等，都是为了更快地响应和处理数据而选择的技术方案。
+
++ 使用缓存会带来什么问题？
+  > 虽然缓存能够提供更好的性能，我们任何事物都具有双面性，对于缓存而言也不列外。它的好也决定了在运用它的时候也会出现各种问题，常见的问题主要有：
+  > + 缓存和数据库双写不一致
+  > + 缓存雪崩、缓存穿透、缓存击穿
+  > + 缓存并发竞争
+
++ 缓存雪崩、缓存穿透、缓存击穿分别指什么？如何进行避免呢？
+  > 这三个问题在缓存使用场景中会常常被提到，接下来就针对这三个问题的场景及解决方案进行分讨论，首先看看产生这些问题的场景怎样的：
+  > + 缓存雪崩：整个缓存系统处于挂掉完全不可用状态，导致所有数据查询都不走缓存，而直接访问数据库的一种现象。
+  > + 缓存穿透：业务在进行数据查询时，查询了一个压根就不存在的数据无法命中缓存，每次都需要访问数据库的场景。
+  > + 缓存击穿：缓存中的某个热点key在某一时刻过期，后续对于这个key的高并发访问直接请求数据库，就像是在缓存的屏障开凿了一个洞一样。
+  > 
+  > 针对产生这些问题的现象和场景，我们应该从中找到突破口进行修复或者避免该问题的发生，从而提高缓存的安全性和可靠性。避免的手段与解决方案如下：
+  > + 缓存雪崩：1）
+  > + 缓存穿透：1）
+  > + 缓存击穿：1）
+
++ redis有哪些基本数据类型？
+  > 主要有5大基本数据类型：字符串（String）、列表（list）、哈希表（hash）、无需集合（set）、有序集合（zset）。其次还有三个扩展类型分别是：
+  > + 字符串：
+  > + 列表：
+  > + 哈希表：
+  > + 无需集合：
+  > + 有序集合：
+
++ redis的线程模型是怎样的？如何支持高并发，速度又为何快？
+  > + 模型：redis 内部使用文件事件处理器并采用了单线程的方式进行实现，因此也叫做单线程模型。需要注意的是在 6.0 版本以后开始采用多线程模型，
+  > 这里的多线程模型仅用来处理网络数据的读写和协议的解析（为了利用 IO 期间的 CPU 资源），redis 命令的执行方式依然采用单线程
+  > （因为多线程反而会更加复杂，需要去控制key、 Lua、事务、LPUSH/LPOP所产生的并发问题）。
+  > + 高并发和快的原因：redis 选择基于 epoll 的 IO 多路复用的方式实现非阻塞 IO 。数据的操作均在内存中完成（内存的处理速度众所周知的快！）， 
+  > 选择简单的单线程方式进行数据操作，避免了多线程环境下的上下文切换和锁竞争。采用了 C 语言进行开发实现，而 C 语言程序对于系统而言执行起来更加高效！
+
++ Redis和Memcached有啥区别？
+  > + 数据结构：redis 拥有更多的数据接口，同时也提供更加丰富的数据操作，当我们需要进行复杂数据结构操作的时候 redis 是不错的选择！
+  > + 集群能力：redis 在 3.x 版本之后，就能够支持 cluster 模式，然而 memcached 没有原生的集群模式，依赖客户端实现对集群中分片数据的写入操作。
+  > + 性能优势：在进行数据存储时，redis 采用单核，而 memcached 采用多核。平均到每一个核上 redis 在存储小数据处时对 memcached 性能更高，
+  > 而在 100k 以上的数据中，Memcached 性能要高于 Redis！
+
++ 跳跃表是一种怎样的数据结构？
+  > todo:
 
 ##### tomcat技术
 
@@ -193,11 +247,12 @@
 + Kafka、ActiveMQ、RabbitMQ、RocketMQ 有什么优缺点？
   > 下面简单对比下这四个组件：
   > + __kafka__：吞吐量强可达到千万级，适用于日志、数据计算、批处理等场景，同 topic 下的分区（队列）数量过多（单机超过64）会影响性能，数据分散在各个机器的分区中。
-  > 采用主从架构模式，毫秒级的响应时间，采用写 log 的方式持久化消息
+  > 采用主从架构模式，毫秒级的响应时间，消息的并行度与分区（队列）有关
   > + __rocketmq__：吞吐量略低于 kafka， 消息不易丢失，适用于对消息可靠性要求高的场景，例如交易、订单等，同 topic 下的队列数量高于 kafka （单机最高5w），
-  > 也是基于 log 持久化消息不同于 kafka 的是支持同步刷盘。采用多主多从的分布式架构，天然就是分布式消息！
+  > 拥有独立的同步刷盘机制，而 kafka 不支持。采用多主多从的分布式架构，天然就是分布式消息！消息的并行度与消费线程数有关。
   > + __rabbitmq__：消息吞吐量处于百万级，优点是消息时延性可达到微秒级，基于主从做高可用并不是分布式消息队列，单个queue的数据指挥在一个节点中存储，
-  > 开启集群模式后，一个queue的数据在各个节点复制都是全量数据。消费过或过期的消息数据会清理，这一点不同于 kafka 和 rocketmq 的消息机制，虽然也支持磁盘持久化，但是会降低性能！
+  > 开启集群模式后，一个queue的数据在各个节点复制都是全量数据。收到消息后暂存在内存中，消费过或过期的消息数据会清理，
+  > 这一点不同于 kafka 和 rocketmq 的消息机制，虽然也支持磁盘持久化，但是会降低性能！
   > + __activemq__：很古老了，没有多少人使用了。
   > 
   > 综上所述，目前比较主流的就是 kafka 和 rabbitmq ，互联网大厂都在使用中，采用 kafka 进行数据分析计算、日志收集聚合，
@@ -217,7 +272,10 @@
 ##### netty（会问吗？）
 
 + Reactor模型有哪些，各有什么特点？
-  > 
+  > reactor模型主要分为三类：
+  > + 单线程： acceptor和handler都为单线程，当单个请求处理过慢会导致后续请求被阻塞，导致IO吞吐性能下降。
+  > + 多线程：acceptor单线程而handler多线程，解决了单个请求慢而阻塞处理的问题，但是当并发请求量大的时候接受请求的线程就会出现瓶颈。
+  > + 主从：acceptor和handler都为多线程执行，可以很好的解决上述出现的两个IO性能问题，一般推荐这种模式
 
 + InternalThreadLocalMap如何实现的？与ThreadLocalMap有什么不同？
   > InternalThreadLocalMap 是 netty内部扩展实现了一个 threadLocal 模型。
@@ -241,9 +299,18 @@
 + 如何设计一个RPC框架？
 + 消息队列如何实现？
 + 怎么看待clickhouse与elasticsearch？
+  > 存储结构不同，clickhouse基于列式存储，适用于大量数据计算的场景
+
 + serverless是什么？
 + 云原生是怎样的？
 + 了解过go吗？
+  > 简单的运用过，通过go写过一个客户端程序，并发的性能更好，因为它基于协程实现并发处理
+
 + jdk8之后都有那些新特性？
+  > 支持函数式编程lambda表达式；基于Stream的流式处理；Files/Path工具类的出现；接口默认方法定义
+
 + RocketMQ事件消息和普通消息有什么不同？
   > 事件消息侧重于已经发生过的每个事件所生出来的消息，它具有具象化、不可变、顺序性等特点。
+
++ 如何实现一个MQ系统
+  > 需要从一下几个方面进行考虑：扩容机制的伸缩性、MQ的可用性（主从架构，舵主多住多从）、如何防止数据丢失（RocketMQ/Kafka的刷盘机制）
